feat: make computer data persistent
Moves away from the fully virtual filesystem nodes to a mount-based
system. There are also 3 default mount types: memory, read-only and
disk.

Disk mounts persist files in the computer filesystem to an actual path
on the server's disk. Memory mounts use most of the pre-existing FSNode
logic and read-only mounts simply throw an exception when trying to
write or delete files or create directories. By default, /rom, /tmp and
/home implement these 3 types. It is also now impossible to write to /.

The computer's ID is now a UUID in all places. This ID is now stored in
the placed block when the computer is started for the first time. Though
the ID is lost when the computer is broken and placed again (for now).

Made computers breakable with the speed of a bench.