@@ -1,190 +1,163 @@
 package dev.cozygalvinism.hycompute.computer;
 
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import dev.cozygalvinism.hycompute.computer.mounts.DiskMount;
+import dev.cozygalvinism.hycompute.computer.mounts.MemoryMount;
+import dev.cozygalvinism.hycompute.computer.mounts.ReadOnlyMount;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.*;
 
 public class VirtualFilesystem {
-    private final FSNode root;
+    private final Map<String, Mount> mounts = new LinkedHashMap<>();
     private final long capacity;
-    private long usedSpace;
 
-    public VirtualFilesystem() throws FSException {
-        this(1024 * 1024);
+    public VirtualFilesystem(Path computerRoot, long capacity) throws FSException {
+        this.capacity = capacity;
+
+        try {
+            Files.createDirectories(computerRoot);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to create computer directory", e);
+        }
+
+        mounts.put("/rom", new ReadOnlyMount());
+        mounts.put("/tmp", new MemoryMount());
+        mounts.put("/home", new DiskMount(computerRoot.resolve("home")));
     }
 
-    public VirtualFilesystem(long capacity) throws FSException {
-        this.capacity = capacity;
-        this.usedSpace = 0;
-        this.root = new FSNode("/", true);
+    private MountResult resolveMount(String path) {
+        String normalized = normalizePath(path);
 
-        mkdir("/rom");
-        mkdir("/rom/programs");
-        mkdir("/home");
-        mkdir("/tmp");
+        for (Map.Entry<String, Mount> entry : mounts.entrySet()) {
+            String mountPoint = entry.getKey();
+            if (normalized.equals(mountPoint) || normalized.startsWith(mountPoint + "/")) {
+                String relativePath = normalized.equals(mountPoint)
+                        ? ""
+                        : normalized.substring(mountPoint.length() + 1);
+                return new MountResult(entry.getValue(), mountPoint, relativePath);
+            }
+        }
+
+        return new MountResult(null, "/", normalized);
     }
 
     public String readFile(String path) throws FSException {
-        FSNode node = resolve(normalizePath(path));
-
-        if (node == null) {
-            throw new FSException("File not found: " + path);
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) {
+            throw new FSException("Invalid path: " + path);
         }
-
-        if (node.isDirectory) {
-            throw new FSException("Cannot read directory: " + path);
-        }
-
-        return node.content;
+        return mr.mount.readFile(mr.relativePath);
     }
 
     public void writeFile(String path, String content) throws FSException {
         String normalized = normalizePath(path);
 
-        if (normalized.startsWith("/rom/") || normalized.equals("/rom")) {
-            throw new FSException("Cannot write to read-only location: " + path);
-        }
-
-        FSNode existing = resolve(normalized);
-        long existingSize = existing != null ? existing.getSize() : 0;
-        long newSize = content.length();
-        long deltaSize = newSize - existingSize;
-
-        if (usedSpace + deltaSize > capacity) {
-            throw new FSException("Not enough disk space");
-        }
-
-        String parentPath = getParentPath(normalized);
-        if (!parentPath.isEmpty() && !exists(parentPath)) {
-            mkdir(parentPath);
-        }
-
-        FSNode parent = resolve(parentPath.isEmpty() ? "/" : parentPath);
-        String fileName = getFileName(normalized);
-
-        FSNode fileNode = parent.children.get(fileName);
-        if (fileNode == null) {
-            fileNode = new FSNode(fileName, false);
-            parent.children.put(fileName, fileNode);
-        } else if (fileNode.isDirectory) {
-            throw new FSException("Cannot overwrite directory with file: " + path);
-        }
-
-        fileNode.content = content;
-        usedSpace += deltaSize;
-    }
-
-    public void deleteFile(String path) throws FSException {
-        String normalized = normalizePath(path);
-
         if (normalized.equals("/")) {
-            throw new FSException(("Cannot delete root directory"));
+            throw new FSException("Cannot write to root directory");
         }
 
-        if (normalized.startsWith("/rom/") || normalized.equals("/rom")) {
-            throw new FSException("Cannot delete read-only location: " + path);
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) {
+            throw new FSException("Invalid path: " + path);
         }
 
-        FSNode node = resolve(normalized);
-        if (node == null) {
-            throw new FSException("File not found: " + path);
+        if (getUsedSpace() + content.length() > getCapacity()) {
+            throw new FSException("Not enough space to write file");
         }
 
-        if (node.isDirectory && !node.children.isEmpty()) {
-            throw new FSException("Directory not empty: " + path);
-        }
-
-        String parentPath = getParentPath(normalized);
-        FSNode parent = resolve(parentPath.isEmpty() ? "/" : parentPath);
-        String fileName = getFileName(normalized);
-
-        usedSpace -= node.getSize();
-        parent.children.remove(fileName);
+        mr.mount.writeFile(mr.relativePath, content);
     }
 
-    public void deleteRecursive(String path) throws FSException {
+    public void delete(String path) throws FSException {
         String normalized = normalizePath(path);
 
         if (normalized.equals("/")) {
             throw new FSException("Cannot delete root directory");
         }
 
-        if (normalized.startsWith("/rom/") || normalized.equals("/rom")) {
-            throw new FSException("Cannot delete read-only location: " + path);
+        for (String mountPoint : mounts.keySet()) {
+            if (normalized.equals(mountPoint)) {
+                throw new FSException("Cannot delete read-only location: " + path);
+            }
         }
 
-        FSNode node = resolve(normalized);
-        if (node == null) {
-            throw new FSException("File not found: " + path);
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) {
+            throw new FSException("Invalid path: " + path);
         }
-
-        String parentPath = getParentPath(normalized);
-        FSNode parent = resolve(parentPath.isEmpty() ? "/" : parentPath);
-        String fileName = getFileName(normalized);
-
-        usedSpace -= calculateSize(node);
-        parent.children.remove(fileName);
+        mr.mount.delete(mr.relativePath);
     }
 
     public boolean exists(String path) {
-        return resolve(normalizePath(path)) != null;
+        String normalized = normalizePath(path);
+
+        if (normalized.equals("/")) return true;
+        for (String mountPoint : mounts.keySet()) {
+            if (normalized.equals(mountPoint)) return true;
+        }
+
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) return false;
+        return mr.mount.exists(mr.relativePath);
     }
 
     public boolean isDirectory(String path) {
-        FSNode node = resolve(normalizePath(path));
-        return node != null && node.isDirectory;
+        String normalized = normalizePath(path);
+
+        if (normalized.equals("/")) return true;
+        for (String mountPoint : mounts.keySet()) {
+            if (normalized.equals(mountPoint)) return true;
+        }
+
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) return false;
+        return mr.mount.isDirectory(mr.relativePath);
     }
 
     public boolean isReadOnly(String path) {
-        String normalized = normalizePath(path);
-        return normalized.startsWith("/rom/") || normalized.equals("/rom");
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) return true;
+        return mr.mount.isReadOnly();
     }
 
     public List<String> list(String path) throws FSException {
-        FSNode node = resolve(normalizePath(path));
+        String normalized = normalizePath(path);
 
-        if (node == null) {
-            throw new FSException("Directory not found: " + path);
+        if (normalized.equals("/")) {
+            List<String> result = new ArrayList<>();
+            for (String mountPoint : mounts.keySet()) {
+                result.add(mountPoint.substring(1));
+            }
+            return result;
         }
 
-        if (!node.isDirectory) {
-            throw new FSException("Not a directory: " + path);
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) {
+            throw new FSException("Invalid path: " + path);
         }
-
-        return new ArrayList<>(node.children.keySet());
+        return mr.mount.list(mr.relativePath);
     }
 
     public void mkdir(String path) throws FSException {
         String normalized = normalizePath(path);
 
-        if (exists(normalized)) {
-            return;
+        if (normalized.equals("/")) {
+            throw new FSException("Cannot modify root directory");
         }
 
-        if (normalized.startsWith("/rom/") && !normalized.equals("/rom/programs")) {
-            if (usedSpace > 0) {
-                throw new FSException("Cannot create directory in read-only location: " + path);
+        for (String mountPoint : mounts.keySet()) {
+            if (normalized.equals(mountPoint)) {
+                return;
             }
         }
 
-        String parentPath = getParentPath(normalized);
-        if (!parentPath.isEmpty() && !exists(parentPath)) {
-            mkdir(parentPath);
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) {
+            throw new FSException("Invalid path: " + path);
         }
-
-        FSNode parent = resolve(parentPath.isEmpty() ? "/" : parentPath);
-        if (parent == null) {
-            throw new FSException("Parent directory not found: " + parentPath);
-        }
-        if (!parent.isDirectory) {
-            throw new FSException("Parent is not a directory: " + parentPath);
-        }
-
-        String dirName = getFileName(normalized);
-        parent.children.put(dirName, new FSNode(dirName, true));
+        mr.mount.mkdir(mr.relativePath);
     }
 
     public void copy(String source, String dest) throws FSException {
@@ -194,60 +167,50 @@ public class VirtualFilesystem {
 
     public void move(String source, String dest) throws FSException {
         copy(source, dest);
-        deleteFile(source);
+        delete(source);
     }
 
-    public long getSize(String path) {
-        FSNode node = resolve(normalizePath(path));
-        if (node == null) return 0;
-        return calculateSize(node);
+    public long getUsedSpace() {
+        long total = 0;
+        for (Mount mount : mounts.values()) {
+            total += mount.getUsedSpace();
+        }
+        return total;
     }
 
     public long getFreeSpace() {
-        return capacity - usedSpace;
+        return capacity - getUsedSpace();
     }
 
     public long getCapacity() {
         return capacity;
     }
 
-    public long getUsedSpace() {
-        return usedSpace;
+    public long getSize(String path) throws FSException {
+        String normalized = normalizePath(path);
+
+        if (normalized.equals("/")) {
+            return getUsedSpace();
+        }
+
+        for (Map.Entry<String, Mount> entry : mounts.entrySet()) {
+            if (normalized.equals(entry.getKey())) {
+                return entry.getValue().getUsedSpace();
+            }
+        }
+
+        MountResult mr = resolveMount(path);
+        if (mr.mount == null) {
+            throw new FSException("Invalid path: " + path);
+        }
+        return mr.mount.getSize(mr.relativePath);
     }
 
     public void writeROM(String path, String content) {
-        String normalized = normalizePath(path);
-        String parentPath = getParentPath(normalized);
-
-        try {
-            if (!exists(parentPath)) {
-                mkdirInternal(parentPath);
-            }
-        } catch (FSException e) {
-
+        MountResult mr = resolveMount(path);
+        if (mr.mount instanceof ReadOnlyMount rom) {
+            rom.writeInternal(mr.relativePath, content);
         }
-
-        FSNode parent = resolve(parentPath.isEmpty() ? "/" : parentPath);
-        String fileName = getFileName(normalized);
-
-        FSNode fileNode = new FSNode(fileName, false);
-        fileNode.content = content;
-        parent.children.put(fileName, fileNode);
-        usedSpace += content.length();
-    }
-
-    private void mkdirInternal(String path) throws FSException {
-        String normalized = normalizePath(path);
-        if (exists(normalized)) return;
-
-        String parentPath = getParentPath(normalized);
-        if (!parentPath.isEmpty() && !exists(parentPath)) {
-            mkdirInternal(parentPath);
-        }
-
-        FSNode parent = resolve(parentPath.isEmpty() ? "/" : parentPath);
-        String dirName = getFileName(normalized);
-        parent.children.put(dirName, new FSNode(dirName, true));
     }
 
     public String normalizePath(String path) {
@@ -265,14 +228,14 @@ public class VirtualFilesystem {
 
         List<String> parts = new ArrayList<>();
         for (String part : path.split("/")) {
-            if (part.isEmpty() || part.equals(".")) {
-                continue;
-            } else if (part.equals("..")) {
-                if (!parts.isEmpty()) {
-                    parts.remove(parts.size() - 1);
+            if (!part.isEmpty() && !part.equals(".")) {
+                if (part.equals("..")) {
+                    if (!parts.isEmpty()) {
+                        parts.removeLast();
+                    }
+                } else {
+                    parts.add(part);
                 }
-            } else {
-                parts.add(part);
             }
         }
 
@@ -281,42 +244,6 @@ public class VirtualFilesystem {
         }
 
         return "/" + String.join("/", parts);
-    }
-
-    private String getParentPath(String normalizedPath) {
-        int lastSlash = normalizedPath.lastIndexOf('/');
-        if (lastSlash <= 0) {
-            return "/";
-        }
-
-        return normalizedPath.substring(0, lastSlash);
-    }
-
-    private String getFileName(String normalizedPath) {
-        int lastSlash = normalizedPath.lastIndexOf('/');
-        return normalizedPath.substring(lastSlash + 1);
-    }
-
-    private FSNode resolve(String normalizedPath) {
-        if (normalizedPath.equals("/")) {
-            return root;
-        }
-
-        FSNode current = root;
-        String[] parts = normalizedPath.substring(1).split("/");
-
-        for (String part : parts) {
-            if (!current.isDirectory) {
-                return null;
-            }
-
-            current = current.children.get(part);
-            if (current == null) {
-                return null;
-            }
-        }
-
-        return current;
     }
 
     public String resolvePath(String path, String workingDirectory) {
@@ -338,34 +265,19 @@ public class VirtualFilesystem {
         return normalizePath(combined);
     }
 
-    private long calculateSize(FSNode node) {
-        if (!node.isDirectory) {
-            return node.getSize();
-        }
+    private record MountResult(Mount mount, String mountPoint, String relativePath) {}
 
-        long total = 0;
-        for (FSNode child : node.children.values()) {
-            total += calculateSize(child);
-        }
-        return total;
-    }
-
-    private static class FSNode {
-        @Nonnull final String name;
-        final boolean isDirectory;
-        @Nullable final Map<String, FSNode> children;
-        @Nullable String content;
-
-        FSNode(@Nonnull String name, boolean isDirectory) {
-            this.name = name;
-            this.isDirectory = isDirectory;
-            this.children = isDirectory ? new HashMap<>() : null;
-            this.content = isDirectory ? null : "";
-        }
-
-        long getSize() {
-            return content != null ? content.length() : 0;
-        }
+    public interface Mount {
+        String readFile(String path) throws FSException;
+        void writeFile(String path, String content) throws FSException;
+        void delete(String path) throws FSException;
+        boolean exists(String path);
+        boolean isDirectory(String path);
+        boolean isReadOnly();
+        List<String> list(String path) throws FSException;
+        void mkdir(String path) throws FSException;
+        long getUsedSpace();
+        long getSize(String path) throws FSException;
     }
 
     public static class FSException extends Exception {
